kubernetes/apps/network/gateway/envoy/manifests/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: network
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: &host external.${SECRET_DOMAIN}
  labels:
    type: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.5.252
  infrastructure:
    annotations:
      # when using gateway-apis in cilium it also creates a service
      # with a different name and tries to take this IP.
      # the problem is the service created by cilium is not the one used by envoy.
      # therefore, the service is disabled
      external-dns.alpha.kubernetes.io/hostname: *host
      lbipam.cilium.io/ips: 192.168.5.252
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production"
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &host internal.${SECRET_DOMAIN}
  labels:
    type: internal
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.5.253
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.5.253
      external-dns.alpha.kubernetes.io/hostname: *host
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production"
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external-l4
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
  labels:
    type: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.5.251
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external-l4.${SECRET_DOMAIN}
      lbipam.cilium.io/ips: 192.168.5.251
  listeners:
    - name: tcp
      protocol: TCP
      port: 10000
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: udp
      protocol: UDP
      port: 10001
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: UDPRoute
